kubernetes/flask/flask-deployment.yaml
apiVersion: extensions/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: app
          imagePullPolicy: Always
          image: srbarrios/test-envs-lb:latest
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
