kubernetes/flask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: backend
