kubernetes/flask/ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path:
        backend:
          serviceName: service-backend
          servicePort: 5000
